@@ -167,6 +167,9 @@ the separator to show at the end of the scrolling title.
 .B list\-format = SONG FORMAT
 The format used to display songs in the main window.
 .TP 
+.B search\-format = SONG FORMAT
+The format used to display songs in the search window. Default is to use list\-format.
+.TP
 .B status\-format = SONG FORMAT
 The format used to display songs on the status line.
 .TP
