@@ -32,6 +32,7 @@ typedef struct {
 	char *config_file;
 	char *key_file;
 	char *list_format;
+	char *search_format;
 	char *status_format;
 #ifndef NCMPC_MINI
 	char *xterm_title_format;
