@@ -3,6 +3,7 @@ ncmpc 0.22 - not yet released
 * remove useless "Connected to ..." message
 * require libmpdclient 2.3, MPD 0.16
 * patched color line-flags
+* configuration option "search-format"
 
 
 ncmpc 0.21 - (2013-04-11)
